--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./Style/Style.css" />
   </head>
   <body>
-    <head>
+    <header>
       <div class="container">
         <div class="items item1"><img src="./images/logo.png" alt="" /></div>
         <div class="items"><a href="#">Home</a></div>
         <div class="items"><a href="#">Info</a></div>
         <div class="items"><a href="#">Bestel</a></div>
       </div>
-    </head>
+    </header>
     <main>
       <section>
         <div class="section1">
@@ -23,8 +23,7 @@
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore
               incidunt numquam sunt perferendis beatae necessitatibus unde, modi
-              consectetur voluptatibus. Consequuntur unde dolor dolores deserunt
-              corrupti, laudantium hic nobis modi. Tenetur?
+              consectetur voluptatibus.
             </p>
           </div>
           <div class="items2 item2">
@@ -37,8 +36,12 @@
           <div class="items3 itemfoto">
             <img src="./images/huis.png" alt="" />
           </div>
-          <div class="items3"><img src="./images/grondplan.jpg" alt="" /></div>
-          <div class="items3"><img src="./images/ligging.jpg" alt="" /></div>
+          <div class="items3 itemss">
+            <img src="./images/grondplan.jpg" alt="" />
+          </div>
+          <div class="items3 itemm">
+            <img src="./images/ligging.jpg" alt="" />
+          </div>
         </div>
       </section>
     </main>
@@ -46,7 +49,7 @@
       <div class="footer1">
         <div class="items4">Examen</div>
         <div class="items4">mailmijICW</div>
-        <div class="items4">30/50</div>
+        <div class="items4">25/50</div>
       </div>
     </footer>
   </body>
